docs: improve post method endpoint docs
