# backend/src/features/comment/commentController.ts
@@ -1,25 +1,21 @@
 import { Request, Response } from 'express';
-import { commentRepository } from './commentRepository';
 import { Comment } from './commentEntity';
+import { commentRepository } from './commentRepository';
 
 class commentController {
   public async createComment(req: Request, res: Response): Promise<void> {
-    const { id, content, user, post_id, create_at } = req.body;
+    const { content } = req.body;
 
     const comment = new Comment();
-    comment.id = id;
     comment.content = content;
-    comment.user = user;
-    comment.post_id = post_id;
-    comment.created_at = create_at;
 
     const response = await commentRepository.createComment(comment);
     res.json(response);
   }
 
   public async getAllComment(req: Request, res: Response): Promise<void> {
-    const comment = await commentRepository.getAllComments();
-    res.json(Comment);
+    const comments = await commentRepository.getAllComments();
+    res.json(comments);
   }
 
   public async getCommentById(req: Request, res: Response): Promise<void> {
@@ -31,12 +27,9 @@ class commentController {
 
   public async updateComment(req: Request, res: Response): Promise<void> {
     const { id } = req.params;
-    const { content, user, post_id, create_at } = req.body;
+    const { content } = req.body;
 
     const updatedComment = new Comment();
-    updatedComment.post_id = post_id;
-    updatedComment.user = user;
-    updatedComment.created_at = create_at;
     updatedComment.content = content;
 
     const response = await commentRepository.updateComment(Number(id), updatedComment);
